# KoiScript

./: CMakeLists.txt  LICENSE  README.md
debug/: CMakeLists.txt  debug.cpp
example_scripts/: brainstorm.koi  funcs.koi  guide.koi  hello_world.koi  main.koi  master.koi  simple.koi  test_lib.koi  vars.koi
include/scripting/: assembler.hpp  ast_node.hpp  closure.hpp  grammar.hpp  interpreter.hpp  koi_script.hpp  lexer.hpp  lexicon.hpp  lib_registrar.cpp  lib_registrar.hpp  parser.hpp  scope.hpp  std_lib.hpp  token.hpp  token_buffer.cpp  token_buffer.hpp  type.hpp  type_defs.hpp  variant.hpp
include/scripting/abstract_syntax_tree/: literal.hpp  meta.hpp  node.hpp
include/scripting/extensions/: extensions.hpp
include/scripting/log/: log.hpp
include/scripting/runtime/: array.hpp  basic_type.hpp  environment.hpp  error.hpp  exe.hpp  function.hpp  global_environment.hpp  i_meta.hpp  instruction.hpp  main.hpp  type_defs.hpp  variable.hpp  variant.hpp
include/scripting/runtime/data/: array.hpp  function.hpp  variant.hpp
include/scripting/runtime/instruction/: assignment.hpp  declaration.hpp  execute.hpp  get_value.hpp  import.hpp  instruction.hpp
include/scripting/runtime/lib/: built_in.hpp  i_library.hpp
include/scripting/runtime/meta/: assign.hpp  exe.hpp  fun_lit.hpp  i_decl.hpp  i_env.hpp  i_lit.hpp  i_meta.hpp  main.hpp  print.hpp  ref.hpp  val.hpp  var.hpp  var_lit.hpp
include/scripting/runtime/variant/: array.hpp  function.hpp  i_variant.hpp  variable.hpp
source/: assembler.cpp  ast_node.cpp  grammar.cpp  interpreter.cpp  koi_script.cpp  lexer.cpp  lexicon.cpp  lib_registrar.cpp  parser.cpp  scope.cpp  std_lib.cpp  token.cpp  type.cpp  variant.cpp
source/abstract_syntax_tree/: literal.cpp  meta.cpp  node.cpp
source/extensions/: extensions.cpp
source/log/: log.cpp
source/runtime/: array.cpp  environment.cpp  exe.cpp  function.cpp  global_environment.cpp  i_meta.cpp  instruction.cpp  main.cpp  variable.cpp  variant.cpp
source/runtime/data/: array.cpp  function.cpp  variable.cpp  variant.cpp
source/runtime/instruction/: instruction.cpp
source/runtime/lib/: built_in.cpp
source/runtime/meta/: assign.cpp  exe.cpp  fun_lit.cpp  i_env.cpp  i_lit.cpp  i_meta.cpp  main.cpp  print.cpp  ref.cpp  val.cpp  var.cpp  var_lit.cpp
source/runtime/variant/: array.cpp  function.cpp  i_variant.cpp  variable.cpp
test/: CMakeLists.txt  lexer_declaration_test.cpp  lexer_meta_test.cpp  lexer_simple_tests.cpp  runtime_array_test.cpp  runtime_function_test.cpp  runtime_variable_test.cpp
